--- a/BackEnd/Presentation/appsettings.Development.json
+++ b/BackEnd/Presentation/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "Persistence": "Server=localhost,1433;Database=reactivitywithkeycloak;User Id=sa;Password=@Bcd.1234;TrustServerCertificate=True"
-  }
+  },
+  "CorsOrigins": [
+    "http://localhost:3000"
+  ]
 }
