--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
     command:
       - start-dev
     volumes:
-      - keycloak-data:/opt/keycloak/data
+      - keycloak_data:/opt/keycloak/data
   
   reactivitybackend:
     build:
@@ -29,4 +29,4 @@ services:
       - ConnectionStrings__sql1=Server=sql2,1433;Database=commanddb;User Id=sa;Password=@Bcd.1234;TrustServerCertificate=True
 
 volumes:
-  keycloak-data:
+  keycloak_data:
