jwt authentication added to .net web api

--- a/BackEnd/Presentation/appsettings.Development.json
+++ b/BackEnd/Presentation/appsettings.Development.json
@@ -3,7 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Debug",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Microsoft.AspNetCore.Authentication.JwtBearer.JwtBearerHandler": "Information",
+      "Microsoft.AspNetCore.Authentication.AuthenticationMiddleware": "Information"
     }
   },
   "ConnectionStrings": {
@@ -11,5 +13,9 @@
   },
   "CorsOrigins": [
     "http://localhost:3000"
-  ]
+  ],
+  "Jwt": {
+    "issuer": "http://127.0.0.1:8080/realms/reactivitywithkeycloak",
+    "audience": "reactivitywithkeycloakapi"
+  }
 }
