jwt token work added

--- a/BackEnd/Presentation/appsettings.Development.json
+++ b/BackEnd/Presentation/appsettings.Development.json
@@ -15,7 +15,7 @@
     "http://localhost:3000"
   ],
   "Jwt": {
-    "issuer": "http://127.0.0.1:8080/realms/reactivitywithkeycloak",
+    "issuer": "http://localhost:8080/realms/reactivitywithkeycloak",
     "audience": "reactivitywithkeycloakapi"
   }
 }
