--- a/FrontEnd/Client/.env
+++ b/FrontEnd/Client/.env
@@ -1,2 +1,5 @@
 
 VITE_BASEURL=http://localhost:5015
+VITE_KEYCLOAKURL=http://localhost:8080
+VITE_REALM=reactivitywithkeycloak
+VITE_CLIENT=reactivityclient
