--- a/FrontEnd/Client/package.json
+++ b/FrontEnd/Client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.6",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "keycloak-js": "^26.2.2",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.2.0",
